[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-inprocess-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
futures-timer = "3.0.2"

# Substrate
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot", default-features = false, features = ["cli"] , branch = "rockmint-10005" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }

# Cumulus
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

[dev-dependencies]

# Substrate
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }

# Polkadot
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
metered = { package = "prioritized-metered-channel", version = "0.2.0" }

# Cumulus
cumulus-test-service = { path = "../../test/service" }

[features]
network-protocol-staging = ["polkadot-service/network-protocol-staging"]
