[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }

cumulus-primitives-core = { path = "../../primitives/core" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }

futures = "0.3.28"
async-trait = "0.1.71"
thiserror = "1.0.43"
jsonrpsee-core = "0.16.2"
parity-scale-codec = "3.6.3"
