[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }

cumulus-primitives-core = { path = "../../primitives/core" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }

futures = "0.3.28"
async-trait = "0.1.73"
thiserror = "1.0.47"
jsonrpsee-core = "0.16.2"
parity-scale-codec = "3.6.4"
