[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-local"
version = "0.1.0"
edition = "2021"

[dependencies]
polkadot-client = { git = "https://github.com/paritytech/polkadot", branch = "kiz-inner-hashing-test" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "kiz-inner-hashing-test" }

cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }

sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }

parking_lot = "0.11.1"
tracing = "0.1.25"
async-trait = "0.1.52"
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"

[dev-dependencies]
# Cumulus deps
cumulus-test-service = { path = "../../test/service" }

# Polkadot deps
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "kiz-inner-hashing-test" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "kiz-inner-hashing-test" }

# substrate deps
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "kiz-inner-hashing-test" }
