[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-minimal-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# polkadot deps
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }

polkadot-availability-recovery = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }
polkadot-collator-protocol = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }
polkadot-network-bridge = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }
polkadot-node-collation-generation = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }
polkadot-node-core-runtime-api = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }

# substrate deps
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }

# cumulus deps
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }
cumulus-relay-chain-rpc-interface = { path = "../relay-chain-rpc-interface" }
cumulus-primitives-core = { path = "../../primitives/core" }

array-bytes = "6.1"
lru = "0.9"
tracing = "0.1.37"
async-trait = "0.1.71"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["macros"] }
