[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-minimal-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# polkadot deps
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }

polkadot-availability-recovery = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-collator-protocol = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-network-bridge = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-node-collation-generation = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }
polkadot-node-core-runtime-api = { git = "https://github.com/paritytech/polkadot", branch = "rockmint-10005" }

# substrate deps
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }

# cumulus deps
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }
cumulus-relay-chain-rpc-interface = { path = "../relay-chain-rpc-interface" }
cumulus-primitives-core = { path = "../../primitives/core" }

array-bytes = "6.1"
lru = "0.11.0"
tracing = "0.1.37"
async-trait = "0.1.73"
futures = "0.3.28"

[features]
network-protocol-staging = ["polkadot-node-network-protocol/network-protocol-staging"]
