[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-rpc-interface"
version = "0.1.0"
edition = "2021"


[dependencies]
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "asset-hub-westend-9435" }

cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "asset-hub-westend-9435" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "asset-hub-westend-9435" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "asset-hub-westend-9435" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "asset-hub-westend-9435" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "asset-hub-westend-9435" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "asset-hub-westend-9435" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "asset-hub-westend-9435" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "asset-hub-westend-9435" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "asset-hub-westend-9435" }

tokio = { version = "1.28.2", features = ["sync"] }

futures = "0.3.28"
futures-timer = "3.0.2"
parity-scale-codec = "3.6.1"
jsonrpsee = { version = "0.16.2", features = ["ws-client"] }
tracing = "0.1.37"
async-trait = "0.1.68"
url = "2.4.0"
serde_json = "1.0.97"
serde = "1.0.164"
lru = "0.9.0"
