[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-rpc-interface"
version = "0.1.0"
edition = "2021"


[dependencies]
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }

cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }

tokio = { version = "1.29.1", features = ["sync"] }

futures = "0.3.28"
futures-timer = "3.0.2"
parity-scale-codec = "3.6.3"
jsonrpsee = { version = "0.16.2", features = ["ws-client"] }
tracing = "0.1.37"
async-trait = "0.1.71"
url = "2.4.0"
serde_json = "1.0.102"
serde = "1.0.171"
lru = "0.9.0"
